--- a/package.json
+++ b/package.json
@@ -23,20 +23,20 @@
     "express": "4.17.1",
     "express-opentracing": "0.1.1",
     "jaeger-client": "3.15.0",
-    "mjml": "4.4.0-beta.2",
-    "yargs": "13.2.4"
+    "mjml": "4.4.0",
+    "yargs": "13.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.5.0",
-    "@babel/core": "7.5.4",
-    "@babel/node": "7.5.0",
-    "@babel/preset-env": "7.5.4",
-    "@babel/register": "7.4.4",
+    "@babel/cli": "7.5.5",
+    "@babel/core": "7.5.5",
+    "@babel/node": "7.5.5",
+    "@babel/preset-env": "7.5.5",
+    "@babel/register": "7.5.5",
     "babel-eslint": "10.0.2",
     "eslint": "6.0.1",
     "eslint-config-airbnb-base": "13.2.0",
     "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-import": "2.18.0",
+    "eslint-plugin-import": "2.18.1",
     "prettier": "1.18.2"
   },
   "prettier": {
